--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 /* Common *************************************************/
-.ui-page{
+.page{
 	margin-top: 30px;
 }
 
@@ -9,6 +9,7 @@
 	text-align: center;
 	padding: 20px;
 	margin-bottom: 30px;
+	min-height: 400px;
 }
 
 
