--- a/css/style.less
+++ b/css/style.less
@@ -12,8 +12,6 @@
 	min-height: 400px;
 }
 
-
-
 /* Components **************************************************/
 
 /* index */
@@ -56,4 +54,15 @@
 .dimmer-loader{
 	position: absolute;top: 0;left: 0;right: 0;bottom: 0;background-color: #333;
 	line-height: 200px;color: #FFF;text-align: center;display: none;
+}
+
+/* In order to show the grid system ****************/
+.col-content{
+	background-color: #DDD;
+	border: solid 1px #BBB;
+	border-radius: 2px;
+	line-height: 50px;
+	text-align: center;
+	margin-bottom: 1em;
+	overflow: hidden;
 }
